--- a/02-css-intro/styles.css
+++ b/02-css-intro/styles.css
@@ -1,10 +1,13 @@
 body {
-    background-color: powderblue;
-  }
-  h1 {
-    color: blue;
-  }
-  p {
-    color: red;
-  }
-  
+  background-color: powderblue;
+}
+h1 {
+  color: blue;
+  font-family: Verdana;
+  font-size: 300%;
+  background-color: white;
+}
+p {
+  color: red;
+  font-size: larger;
+}
